# SW-Quadruped

./: README.md
01_CAD/: large_wire_Holder.FCStd  large_wire_Holder.FCStd1  small_wire_Holder.FCStd  small_wire_Holder.FCStd1
01_CAD/V10/: V10.20250804-194720.FCBak  V10.FCStd
01_CAD/V7/: assemv7.FCStd  assemv7.FCStd1  connecter.FCStd
01_CAD/V8/: assembly.20240908-232336.FCBak  assembly.FCStd  assembly.FCStd1  sidePieceA.20240916-234329.FCBak  sidePieceA.FCStd  sidePieceB-BodyPocket008.3mf  tcs3574.20240922-195942.FCBak  tcs3574Case.20240922-202809.FCBak
02_Code/: platformio.ini
02_Code/ESP-IDF/QuadrupedRobot/main/: CMakeLists.txt  Modes.cpp  Movement.cpp  font.cpp  idf_component.yml  interpolation.cpp  legCtrls.cpp  main.cpp  math_functions.cpp  motor.cpp  pca9685.cpp  pid.cpp  ssd1306.cpp
02_Code/ESP-IDF/QuadrupedRobot/main/drivers/: ACS71240.cpp  bno055.cpp  esp-now.cpp  font.cpp  led_strip.cpp  pca9685.cpp  ssd1306.cpp
02_Code/ESP-IDF/QuadrupedRobot/main/interpolators/: interpolation.cpp  pid.cpp
02_Code/ESP-IDF/QuadrupedRobot/main/motion_system/: Movement_cycles.cpp  kinematics.cpp  leg.cpp  motion.cpp  motor.cpp  ramp_leg.cpp  ramped_kinematics.cpp  robot_movement.cpp
02_Code/ESP-IDF/QuadrupedRobot/main/motion_system/positioning/: cycle.cpp
02_Code/FinalProjectReimagined/: platformio.ini
02_Code/Quadruped_Robot/: platformio.ini
02_Code/RobotController/: platformio.ini
02_Code/include/: externFunctions.h
02_Code/src/: Kinematics.cpp  Walking.cpp  (+1 more)
04_Tools/: motorOffset.py
CAD/: MG996R.FCStd  assemblytest2.FCStd
Code/: platformio.ini
(+268 files in other folders)
